fixed small styling issues

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                         <li>1 + 1/2 cup pureed strawberries <span class="note">thawed frozen fruit works well</span></li>
                         <li>Maple syrup or honey if needed</p>
                     </ul>
-                    <p class="note">* I use <a class="note-link" href="https://www.bobsredmill.com/gluten-free-all-purpose-baking-flour.html" target="_blank" rel="noreferrer">Bob's Red Mill All Purpose Gluten Free flour</a>, which is mostly chickpea flour. <b>All flours are not created equally</b>, so I don't recommend experimenting with other flours; if you do, you'll probably need to add less pureed strawberries because chickpea flour is quite dry.</p>
-                    <p class="note">** A high quality cocoa powder is essential for these recipes due to the low levels of sugar in them.</p>
+                    <p class="note">* I use <a class="note-link" href="https://www.bobsredmill.com/gluten-free-all-purpose-baking-flour.html" target="_blank" rel="noreferrer">Bob's Red Mill All Purpose Gluten Free flour</a>, which is mostly chickpea flour. <b>All flours are not created equally</b>, so I don't recommend experimenting with other flours; if you do, you'll probably need to add less pureed strawberries because chickpea flour absorbs a lot of liquid.</p>
+                    <p class="note">** A high quality cocoa powder is essential for this recipe due to the low sugar content.</p>
                     <p>Preheat oven to 350°F. Grease an 8x8-inch pan with your oil of choice, or use oven-safe wax paper to reduce mess.</p>
                     <p>In a large mixing bowl, whisk together the eggs, melted coconut oil, and vanilla until smooth.</p>
                     <p>In a smaller bowl, mix the flour, cocoa powder, espresso powder, chai spice, baking soda, and salt. Gently fold the dry ingredients into the wet ingredients, being sure to remove any clumps.<p>
@@ -108,13 +108,13 @@
                         <li>A pinch of smoked salt <span class="note">optional</span></li>
                     </ul>
                     <p class="note">* Oat milk is naturally a bit sweet which makes it great for hot cocoa! If you're using another type of milk, you may need to add a bit of honey or maple syrup.</p>
-                    <p class="note">** A high quality cocoa powder is essential for these recipes due to the low levels of sugar in them.</p>
+                    <p class="note">** A high quality cocoa powder is essential for this recipe due to the low sugar content.</p>
                     <p><i>The proper way:</i> Warm the oat milk in a saucepan over medium heat until it's at or a little above drinking temperature (don't let it boil!). Add the other ingredients and wisk until the chocolate is all disolved.</p>
                     <p><i>The lazy way:</i> Microwave the oat milk for about 1 to 1 1/2 minutes, or until it's at drinking temperature. Add the other ingredients and stir carefully until blended.</p>
                 </div>
                 <div class="right">
                     <figure>
-                        <img src="images/persephone.jpg" alt="Persephone the Cat" height="100px" width="75px">
+                        <img src="images/persephone.jpg" alt="Persephone the Cat" height="200px" width="150px">
                         <figcaption>OH HELLO THERE</figcaption>
                     </figure>
                     <p>This is a repository for the recipes that I've developed to fit my family's (many) food issues. That means every recipe will be vegetarian and completely free of gluten, dairy, processed sugar, and corn derivatives!. These recipes fit very well into vegan/vegetarian paleo and keto diets.</p>
