added mobile and tablet views

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <img src="images/persephone.jpg" alt="Persephone the Cat" height="200px" width="150px">
                         <figcaption>OH HELLO THERE</figcaption>
                     </figure>
-                    <p>This is a repository for the recipes that I've developed to fit my family's (many) food issues. That means every recipe will be vegetarian and completely free of gluten, dairy, processed sugar, and corn derivatives!. These recipes fit very well into vegan/vegetarian paleo and keto diets.</p>
+                    <p>This is a repository for the recipes that I've developed to fit my family's (many) food issues. That means every recipe will be vegetarian and completely free of gluten, dairy, processed sugar, and corn derivatives! These recipes fit very well into vegan/vegetarian paleo and keto diets.</p>
                     <p>I code! You can learn more about that on <a class="shlink" href="http://iamcasper.surge.sh" target="_blank" rel="noreferrer">my website</a>, or check my github page to see what I'm currently working on.</p>
                     <a href="https://github.com/catspook" target="_blank" rel="noreferrer"><img src="images/GitHub-Mark-120px-plus.png" alt="Github" height="41px" width="41px"></a></p>
                 </div>
