added more recipes

--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
                     </ul>
                 </div>
                 <div class="middle">
+                    <h2 id="coming-soon">Coming Soon!</h2>
+                    <p class="note">Keep on the lookout for for the following recipes...<p>
+                    <ul>
+                        <li>How to Cook Rice Without a Rice Cooker</li>
+                        <li>Chocolate - Orange Cake</li>
+                        <li>Perfect Moka Pot Espresso</li>
+                        <li>Sugar-Free Pistachio Latte</li>
+                        <li>Sugar-Free Flavored Mocha</li>
+                        <li>Welsh Rabbit (Mac n Cheese)</li>
+                        <li>Cauliflour Rice and Protein Taco Filling</li>
+                    </ul>
+                    <hr />
                     <h2 id="strawberry-brownies">Strawberry Brownies</h2>
                     <p class="note center">45 - 60 min | Have as many as you want, I won't tell<p>
                     <ul>
