--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -24,6 +24,8 @@
                 <div class="left">
                     <h2>Recipe Index</h2>
                     <ul>
+                        <li><a href="#orange-chocolate-cake">orange chocolate cake</a></li>
+                        <li><a href="#bakers-spice">coffee baking spice</a></li>
                         <li><a href="#strawberry-brownies">strawberry brownies</a></li>
                         <li><a href="#chai-cranberry-sauce">chai-spiced cranberry sauce</a></li>
                         <li><a href="#cranberry-chai-thumbprint">cranberry thumbprint cookies</a></li>
@@ -36,7 +38,6 @@
                     <p class="note">Keep on the lookout for for the following recipes...<p>
                     <ul>
                         <li>How to Cook Rice Without a Rice Cooker</li>
-                        <li>Chocolate - Orange Cake</li>
                         <li>Perfect Moka Pot Espresso</li>
                         <li>Sugar-Free Pistachio Latte</li>
                         <li>Sugar-Free Flavored Mocha</li>
@@ -44,6 +45,42 @@
                         <li>Cauliflour Rice and Protein Taco Filling</li>
                     </ul>
                     <hr />
+                    <h2 id="orange-chocolate-cake">Orange Chocolate Cake</h2>
+                    <p class="note center">45 min | Makes 8 pieces of cake</p>
+                    <ul>
+                        <li>4 large eggs</li>
+                        <li>1 tablespoon maple syrup <span class="note">more to taste</span></li>
+                        <li>1 tablespoon vanilla extract</li>
+                        <li>1/2 cup non-dairy milk</li>
+                        <li>1 cup almond flour</li>
+                        <li>1/2 cup unsweetened cocoa powder*</li>
+                        <li>1/2 teaspoon baking soda</li>
+                        <li>zest of 1 large orange</li>
+                        <li>1/2 - 1 teaspoon of <a href="#bakers-spice" class="note-link">coffee baking spice</a>, according to taste</li>
+                    </ul>
+                    <p class="note">* A high quality cocoa powder is essential for this recipe due to the low sugar content.</p>
+                    <p class="note">This recipe makes quite a moist cake, so I'd recommend eating it alone (or with some whipped cream on top). If you want to go all-out with ice cream, try adding a little less almond milk--maybe 1/3 cup instead.</p>
+                    <p>Preheat oven to 325°F. Grease an 8x8-inch glass pan (or a 9-inch glass pie plate) with your oil of choice, or use oven-safe wax paper to reduce mess.</p>
+                    <p>Whisk together the eggs, maple syrup, vanilla, and milk in a large mixing bowl.</p>
+                    <p>Gradually whisk in the almond flour and cocoa flour.</p>
+                    <p>Whisk in the spices, baking soda, and orange zest. The batter will be pretty thin.</p>
+                    <p>Pour the batter into the glass pan and bake for 15 minutes, then cover the top of the cake with tin foil so it doesn't burn. Continue to cook the cake for 10-15 minutes longer, or until the center is set (a toothpick stabbed into the center should come out clean).</p>
+                    <p>Cool the cake on a cooling rack until it reaches room temperature. Store the remaining slices in the fridge.</p>
+                    <hr/>
+                    <h2 id="bakers-spice">Coffee Baking Spice</h2>
+                    <p class="note center"> 2 min | Makes about 1 1/2 teaspoons of spice mix<p>
+                    <ul>
+                        <li>1/2 teaspoon espresso-grind coffee or instant coffee powder <span class="note">or replace with cocoa powder</span></li>
+                        <li>1/2 teaspoon cocoa powder</li>
+                        <li>1/8 teaspoon ground cinnamon</li>
+                        <li>1/8 teaspoon ground nutmeg</li>
+                        <li>1/8 teaspoon ground allspice</li>
+                        <li>pinch of ground pepper</li>
+                        <li>pinch of dried ground ginger</li>
+                    </ul>
+                    <p>This is a sugar-free version of <a href="https://www.savoryspiceshop.com/spice-blends/coffee-spice" class="note-link">Baker's Brew Coffee Spice</a> from Savory Spice.</p>
+                    <p>You can replace this mix with either chai spices or pumpkin spices in a pinch.</p>
+                    <hr/>
                     <h2 id="strawberry-brownies">Strawberry Brownies</h2>
                     <p class="note center">45 - 60 min | Have as many as you want, I won't tell<p>
                     <ul>
@@ -61,7 +98,7 @@
                     </ul>
                     <p class="note">* I use <a class="note-link" href="https://www.bobsredmill.com/gluten-free-all-purpose-baking-flour.html" target="_blank" rel="noreferrer">Bob's Red Mill All Purpose Gluten Free flour</a>, which is mostly chickpea flour. <b>All flours are not created equally</b>, so I don't recommend experimenting with other flours; if you do, you'll probably need to add less pureed strawberries because chickpea flour absorbs a lot of liquid.</p>
                     <p class="note">** A high quality cocoa powder is essential for this recipe due to the low sugar content.</p>
-                    <p>Preheat oven to 350°F. Grease an 8x8-inch pan with your oil of choice, or use oven-safe wax paper to reduce mess.</p>
+                    <p>Preheat oven to 350°F. Grease an 8x8-inch glass pan with your oil of choice, or use oven-safe wax paper to reduce mess.</p>
                     <p>In a large mixing bowl, whisk together the eggs, melted coconut oil, and vanilla until smooth.</p>
                     <p>In a smaller bowl, mix the flour, cocoa powder, espresso powder, chai spice, baking soda, and salt. Gently fold the dry ingredients into the wet ingredients, being sure to remove any clumps.<p>
                     <p>Add the pureed fruit to the mix and fold until completely mixed. Taste the dough, and add about 1 tablespoon of maple syrup or honey at a time to taste.</p> 
