--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                 <div class="left">
                     <h2>Recipe Index</h2>
                     <ul>
+                        <li><a href="#kimchi-fried-rice">kimchi fried rice</a></li>
+                        <li><a href="#no-rice-cooker-rice">no rice-cooker rice</a></li>
                         <li><a href="#orange-chocolate-cake">orange chocolate cake</a></li>
                         <li><a href="#bakers-spice">coffee baking spice</a></li>
                         <li><a href="#strawberry-brownies">strawberry brownies</a></li>
@@ -37,13 +39,45 @@
                     <h2 id="coming-soon">Coming Soon!</h2>
                     <p class="note">Keep on the lookout for for the following recipes...<p>
                     <ul>
-                        <li>How to Cook Rice Without a Rice Cooker</li>
+                        <li><strike>Kimchi Fried Rice</strike> <span class="note">just added!</span></li>
+                        <li><strike>How to Cook Rice Without a Rice Cooker</strike> <span class="note">just added!</span></li>
                         <li>Perfect Moka Pot Espresso</li>
                         <li>Sugar-Free Pistachio Latte</li>
                         <li>Sugar-Free Flavored Mocha</li>
                         <li>Welsh Rabbit (Mac n Cheese)</li>
                         <li>Cauliflour Rice and Protein Taco Filling</li>
                     </ul>
+                    <hr />
+                    <h2 id="kimchi-fried-rice">Kimchi Fried Rice</h2>
+                    <p class="note center">15 min | 2 entrees or ~4 sides</p>
+                    <ul>
+                        <li>18 oz kimchi</li>
+                        <li>about 2 cups <a href="#no-rice-cooker-rice" class="note-link">cooked rice</a></li>
+                        <li>1 cup frozen peas</li>
+                        <li>12 oz tofu OR 4 eggs</li>
+                        <li>2 teaspoons cooking oil <span class="note">sesame/peanut preferred</span></li>
+                    </ul>
+                    <p>Add the oil and the frozen peas to a skillet over medium-high heat. Add the tofu now, if using. Stir the pan frequently until all extra water is evaporated from the pan*. This should take about 5-10 minutes, depending on if you used tofu or not.</p>
+                    <p>If using eggs: once the peas are cooked, turn off the heat and let the pan cool for about 2-3 minutes (to avoid rubbery eggs!). Turn the heat on medium-low and add another teaspoon of oil if needed before adding the eggs. Scramble the eggs until they're just about done, but not quite--the eggs should still be slightly runny.</p>
+                    <p>Turn the pan up to medium-high heat again. Add the kimchi and rice, and sautee until the extra water is evaporated from the pan (see above), stirring constantly. This should take no longer than 3 minutes or so. If it's taking too long, turn up the heat.<p>
+                    <p class="note">* This step is important in order to avoid soggy steamed veggies. The excess moisture will have evaporated off when the "hiss" of oil meeting water has stopped, and you see no water spreading from under the veggies as you stir the pan. If you notice some veggies are burning while there's still water in the pan, turn the heat down and stir more often (don't worry too much if veggies burn--the stir-fry sauce [in this case, kimchi] will un-stick the pan).</p>
+                    <hr />
+                    
+                    <h2 id="no-rice-cooker-rice">No Rice-Cooker Rice</h2>
+                    <p class="note center">30 min | About 4 cups or so of cooked rice</p>
+                    <ul>
+                        <li>Uncooked rice <span class="note">roughly 2 cups or so</span></li>
+                        <li>1-quart saucepan <span class="note">NOT non-stick</span></li>
+                    </ul>
+                    <p class="note">This is less of a recipe and more of a rule of thumb, but it's easier than it looks!</p>
+                    <p class="note">You're going to be relying on sight and smell more than usual in this recipe, especially since different rice varieties require different water ratios and cooking times. I recommend starting with "regular" brown rice (NOT the quick-cooking kind), as it doesn't burn as easily as white rice and and works well with the water/rice ratio we're using here.</p>
+                    <p>Add the rice to the saucepan. Stick your index finger into the pan, strait down; the rice should go up to your first finger joint.</p>
+                    <p>Rinse your rice in cold water several times, until the water runs clear (dig your hand into it and really mix it up; you'll be amazed by how much extra hulls and starch you can get off some brands). Be careful when dumping out the water so as to not dump out the rice too.</p>
+                    <p>Stick your finger strait down in the pan again, and add cold water until it's slightly above your second knuckle.</p>
+                    <p>Put the pot on a burner on medium-high heat, uncovered. Wait until the pot is boiling.</p>
+                    <p>Let it boil for one minute, then cover the pot and turn the heat down to low (about a 3-4 out of 10, heat-wise).</p>
+                    <p>At this point, the rice needs to just sit for a certain amount of time to steam. White rice cooks in about 10-15 minutes, and brown rice will take between 30-40 minutes. I recommend setting a timer to either 10 or 30 minutes, and then quickly lifting the lid and moving the rice gently to the side with a spoon so you can check how much water is left in the pot. If there's still water, then replace the lid and set the timer for another 5 minutes.</p> 
+                    <p>The rice is done when the top of the rice has "pits" in it (you'll know it when you see it) and the water in the bottom of the pan is absorbed (the lid and sides should still have some level of condensation on them though). If the rice is still a bit hard or chewy, add a few tablespoons of water to the pan and let it cook for 5 minutes longer. If you smell popcorn, the rice is overcooked and the bottom layer burned--the rest of the rice will be fine though, and the burnt rice will come off pretty easily if you soak the pot.</p>
                     <hr />
                     <h2 id="orange-chocolate-cake">Orange Chocolate Cake</h2>
                     <p class="note center">45 min | Makes 8 pieces of cake</p>
