added new recipe

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <div class="left">
                     <h2>Recipe Index</h2>
                     <ul>
+                        <li><a href="#mac-cheese">broccoli mac and cheese</a></li>
                         <li><a href="#kimchi-fried-rice">kimchi fried rice</a></li>
                         <li><a href="#no-rice-cooker-rice">no rice-cooker rice</a></li>
                         <li><a href="#orange-chocolate-cake">orange chocolate cake</a></li>
@@ -39,14 +40,32 @@
                     <h2 id="coming-soon">Coming Soon!</h2>
                     <p class="note">Keep on the lookout for for the following recipes...<p>
                     <ul>
+                        <li><strike>Welsh Rabbit (Mac n Cheese)</strike> <span class="note">just added!</span></li>
                         <li><strike>Kimchi Fried Rice</strike> <span class="note">just added!</span></li>
                         <li><strike>How to Cook Rice Without a Rice Cooker</strike> <span class="note">just added!</span></li>
                         <li>Perfect Moka Pot Espresso</li>
                         <li>Sugar-Free Pistachio Latte</li>
                         <li>Sugar-Free Flavored Mocha</li>
-                        <li>Welsh Rabbit (Mac n Cheese)</li>
                         <li>Cauliflour Rice and Protein Taco Filling</li>
                     </ul>
+                    <hr />
+                    <h2 id="mac-cheese">Mac and Cheese (Welsh Rabbit)</h2>
+                    <p class="note center">15-30 min | 2 entrees</p>
+                    <ul>
+                        <li>1 package noodles <span class="note">(I like a chickpea pasta like <a class="note-link" href="https://www.eatbanza.com/products/shells" target="_blank" rel="noreferrer">banza</a> for extra protein and low carbs)</span></li>
+                        <li>1 teaspoon olive oil</li>
+                        <li>1 package frozen broccoli or cauliflower</li>
+                        <li>about a quarter cup tahini</li>
+                        <li>about 3 tablespoons nutritional yeast</li>
+                        <li>1 tablespoon worcestershire sauce</li>
+                        <li>2 teaspoons dijon mustard</li>
+                        <li>water</li>
+                    </ul>
+                    <p class="note">This recipe is my take on a vegan Welsh Rabbit sauce. Welsh Rabbit typically includes a roux base and white wine or beer, but I haven't been satisfied with the results when I've used them with vegan cheese. But go ahead and add a bit of dark beer or white wine to the sauce if you want.</p>
+                    <p>Cook the pasta according to its instructions.</p>
+                    <p>As the pasta is cooking, add the tahini, nutritional yeast, worcestershire sauce, and dijon mustard to a bowl, stirring until combined. Add water and stir until the sauce is very runny (too runny for good cheese sauce). Taste the sauce at this point, and add more nutritional yeast for cheesiness, and more dijon and worcestershire sauce for spiciness.</p>
+                    <p>Add the oil and frozen broccoli to a skillet. Sautee the broccoli on med-high heat, stirring frequently, until the extra water is cooked off and the broccoli is browning. Turn the heat off and pour the sauce into the pan, stirring constantly. There should be enough risidual heat in the pan to warm the sauce and evaporate off the extra water; add more water if needed.</p>
+                    <p>Pour the sauce into the cooked, drained pasta, and enjoy!</p>
                     <hr />
                     <h2 id="kimchi-fried-rice">Kimchi Fried Rice</h2>
                     <p class="note center">15 min | 2 entrees or ~4 sides</p>
@@ -112,7 +131,7 @@
                         <li>pinch of ground pepper</li>
                         <li>pinch of dried ground ginger</li>
                     </ul>
-                    <p>This is a sugar-free version of <a href="https://www.savoryspiceshop.com/spice-blends/coffee-spice" class="note-link">Baker's Brew Coffee Spice</a> from Savory Spice.</p>
+                    <p>This is a sugar-free version of <a href="https://www.savoryspiceshop.com/spice-blends/coffee-spice" target="_blank" rel="noreferrer" class="note-link">Baker's Brew Coffee Spice</a> from Savory Spice.</p>
                     <p>You can replace this mix with either chai spices or pumpkin spices in a pinch.</p>
                     <hr/>
                     <h2 id="strawberry-brownies">Strawberry Brownies</h2>
