--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <div class="left">
                     <h2>Recipe Index</h2>
                     <ul>
+                        <li><a href="#hot-cocoa">hot cocoa 4 ways</a></li>
                         <li><a href="#mac-cheese">broccoli mac and cheese</a></li>
                         <li><a href="#kimchi-fried-rice">kimchi fried rice</a></li>
                         <li><a href="#no-rice-cooker-rice">no rice-cooker rice</a></li>
@@ -40,14 +41,35 @@
                     <h2 id="coming-soon">Coming Soon!</h2>
                     <p class="note">Keep on the lookout for for the following recipes...<p>
                     <ul>
-                        <li><strike>Welsh Rabbit (Mac n Cheese)</strike> <span class="note">just added!</span></li>
-                        <li><strike>Kimchi Fried Rice</strike> <span class="note">just added!</span></li>
-                        <li><strike>How to Cook Rice Without a Rice Cooker</strike> <span class="note">just added!</span></li>
+                        <li><strike>Hot Cocoa 4 Ways</strike><span class="note">just added!</span></li>
                         <li>Perfect Moka Pot Espresso</li>
                         <li>Sugar-Free Pistachio Latte</li>
                         <li>Sugar-Free Flavored Mocha</li>
                         <li>Cauliflour Rice and Protein Taco Filling</li>
                     </ul>
+                    <hr />
+                    <h2 id="notes">Note: Cooking Deserts Without Sweeteners</h2>
+                    <p>My household is vegetarian, diary-free, gluten-free, corn-free, and processed-sugar free. We ate a very strict diet for about a year...until I started craving brownies. Finding truly sugar-free recipes is <i>hard</i>; most "sugar free" recipes just sub out a half-cup of sugar with a half-cup of agave/honey/erythritol instead. My first breakthrough (the strawberry brownies) came after months and months of failure.</p>
+                    <p>Here's what I discovered in those months of failure:</p>
+                    <ul>
+                        <li>It took me about a month to stop craving sugar. Nowadays, I can't handle more than a bite of traditionally sweet deserts.</li>
+                        <li>If it doesn't taste good raw, it won't taste good once it's baked. If the dough tastes a little bitter, add something to sweeten it.</li>
+                        <li>Oat milk is the most naturally sweet dairy-free milk.</li>
+                        <li><a href="http://www.momococoa.com" target="_blank" rel="noreferrer" class="note-link">Momo Cocoa</a> has the least bitter cocoa powder I've ever had, and in my opinion it's well worth getting if you're trying to avoid sweeteners.</li>
+                    </ul>
+                    <hr />
+                    <h2 id="hot-cocoa">Hot Cocoa 4 Ways</h2>
+                    <p class="note center">5 min | 1 cup</p>
+                    <ul>
+                        <li>1 tablespoon cocoa powder</li>
+                        <li>10 - 12 oz oat milk</li>
+                        <li>1/2 teaspoon vanilla extract</li>
+                        <li>honey, maple syrup, or sugar <span class="note">optional</span></li>
+                        <li>1 drop peppermint oil OR a sprinkle ground cinnamon OR zest from 1/2 a large orange <span class="note">optional, for flavor</span></li>
+                    </ul>
+                    <p class="note">For peppermint, cinnamon, or orange hot chocolate. Spicy-smoky hot chocolate is found <a class="note-link" href="spicy-cocoa">here</a>.</p>
+                    <p><i>The proper way:</i> Warm the oat milk in a saucepan over medium heat until it's at or a little above drinking temperature (don't let it boil!). Add the other ingredients and wisk until the chocolate is all disolved.</p>
+                    <p><i>The lazy way:</i> Microwave the oat milk for about 1 1/2 - 2 minutes, or until it's at drinking temperature. Add the other ingredients and stir carefully until blended.</p>
                     <hr />
                     <h2 id="mac-cheese">Mac and Cheese (Welsh Rabbit)</h2>
                     <p class="note center">15-30 min | 2 entrees</p>
@@ -106,12 +128,11 @@
                         <li>1 tablespoon vanilla extract</li>
                         <li>1/2 cup non-dairy milk</li>
                         <li>1 cup almond flour</li>
-                        <li>1/2 cup unsweetened cocoa powder*</li>
+                        <li>1/2 cup unsweetened cocoa powder</li>
                         <li>1/2 teaspoon baking soda</li>
                         <li>zest of 1 large orange</li>
                         <li>1/2 - 1 teaspoon of <a href="#bakers-spice" class="note-link">coffee baking spice</a>, according to taste</li>
                     </ul>
-                    <p class="note">* A high quality cocoa powder is essential for this recipe due to the low sugar content.</p>
                     <p class="note">This recipe makes quite a moist cake, so I'd recommend eating it alone (or with some whipped cream on top). If you want to go all-out with ice cream, try adding a little less almond milk--maybe 1/3 cup instead.</p>
                     <p>Preheat oven to 325°F. Grease an 8x8-inch glass pan (or a 9-inch glass pie plate) with your oil of choice, or use oven-safe wax paper to reduce mess.</p>
                     <p>Whisk together the eggs, maple syrup, vanilla, and milk in a large mixing bowl.</p>
@@ -141,16 +162,14 @@
                         <li>1/4 cup melted coconut oil</li>
                         <li>1 teaspoon vanilla extract</li>
                         <li>1/2 cup gluten free flour*</li>
-                        <li>1/4 cup cocoa powder**</li>
+                        <li>1/4 cup cocoa powder</li>
                         <li>1/4 teaspoon baking soda</li>
                         <li>1/2 teaspoon salt</li>
                         <li>1/2 teaspoon espresso-grind coffee or instant coffee powder <span class="note">optional, but recommended</span></li>
                         <li>1/4 teaspoon ground chai spice <span class="note">optional, but recommended</span></li>
                         <li>1 + 1/2 cup pureed strawberries <span class="note">thawed frozen fruit works well</span></li>
-                        <li>Maple syrup or honey if needed</p>
                     </ul>
                     <p class="note">* I use <a class="note-link" href="https://www.bobsredmill.com/gluten-free-all-purpose-baking-flour.html" target="_blank" rel="noreferrer">Bob's Red Mill All Purpose Gluten Free flour</a>, which is mostly chickpea flour. <b>All flours are not created equally</b>, so I don't recommend experimenting with other flours; if you do, you'll probably need to add less pureed strawberries because chickpea flour absorbs a lot of liquid.</p>
-                    <p class="note">** A high quality cocoa powder is essential for this recipe due to the low sugar content.</p>
                     <p>Preheat oven to 350°F. Grease an 8x8-inch glass pan with your oil of choice, or use oven-safe wax paper to reduce mess.</p>
                     <p>In a large mixing bowl, whisk together the eggs, melted coconut oil, and vanilla until smooth.</p>
                     <p>In a smaller bowl, mix the flour, cocoa powder, espresso powder, chai spice, baking soda, and salt. Gently fold the dry ingredients into the wet ingredients, being sure to remove any clumps.<p>
@@ -163,7 +182,7 @@
                     <ul>
                         <li>10-12 oz pack of fresh or frozen cranberries</li>
                         <li>3/4 cup water</li>
-                        <li>1 tablespoon maple syrup <span class="note">or more to taste</span></li>
+                        <li>1 tablespoon maple syrup</li>
                         <li>1 teaspoon ground chai spice</li>
                         <li>1 teaspoon vanilla extract</li>
                     </ul>
@@ -202,17 +221,15 @@
                     <h2 id="spicy-cocoa">Smoky Spicy Hot Chocolate</h2>
                     <p class="note center">2 - 15 min | 1 serving</p>
                     <ul>
-                        <li>1 cup oat milk*</li>
-                        <li>2 teaspoons cocoa** <span class="note">or more to taste</span></li>
+                        <li>1 cup oat milk</li>
+                        <li>2 teaspoons cocoa <span class="note">or more to taste</span></li>
                         <li>1/8 teaspoon ground cinnamon</li>
                         <li>1/8 teaspoon chipotle powder <span class="note">or less to taste</span></li>
                         <li>1/4 teaspoon vanilla extract</li>
                         <li>A pinch of smoked salt <span class="note">optional</span></li>
                     </ul>
-                    <p class="note">* Oat milk is naturally a bit sweet which makes it great for hot cocoa! If you're using another type of milk, you may need to add a bit of honey or maple syrup.</p>
-                    <p class="note">** A high quality cocoa powder is essential for this recipe due to the low sugar content.</p>
                     <p><i>The proper way:</i> Warm the oat milk in a saucepan over medium heat until it's at or a little above drinking temperature (don't let it boil!). Add the other ingredients and wisk until the chocolate is all disolved.</p>
-                    <p><i>The lazy way:</i> Microwave the oat milk for about 1 to 1 1/2 minutes, or until it's at drinking temperature. Add the other ingredients and stir carefully until blended.</p>
+                    <p><i>The lazy way:</i> Microwave the oat milk for about 1 1/2 to 2 minutes, or until it's at drinking temperature. Add the other ingredients and stir carefully until blended.</p>
                 </div>
                 <div class="right">
                     <figure>
