--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <li>1/2 teaspoon vanilla extract</li>
                         <li>1 drop peppermint oil OR a sprinkle ground cinnamon OR zest from 1/2 a large orange <span class="note">optional, for flavor</span></li>
                     </ul>
-                    <p class="note">For peppermint, cinnamon, or orange hot chocolate. Spicy-smoky hot chocolate is found <a class="note-link" href="spicy-cocoa">here</a>.</p>
+                    <p class="note">For peppermint, cinnamon, or orange hot chocolate. Spicy-smoky hot chocolate is found <a class="note-link" href="#spicy-cocoa">here</a>.</p>
                     <p><i>The proper way:</i> Warm the oat milk in a saucepan over medium heat until it's at or a little above drinking temperature (don't let it boil!). Add the other ingredients and wisk until the chocolate is all disolved.</p>
                     <p><i>The lazy way:</i> Microwave the oat milk for about 1 1/2 - 2 minutes, or until it's at drinking temperature. Add the other ingredients and stir carefully until blended.</p>
                     <hr />
